[package]
name = "laminarmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glommio = "0.7.0"
crc32fast = "1"
bincode = "1"
async-trait = "0.1.57"
futures-lite = "1.12.0"
byteorder = "1.4.3"
serde = { version = "1.0.144", features = ["derive"] }

[lib]
name = "laminarmq"

[[bin]]
name = "laminarmq-client-cli"
path = "./src/bin/laminarmq_client_cli.rs"

[[bin]]
name = "laminarmq-server"
path = "./src/bin/laminarmq_server.rs"

