[package]
name = "laminarmq"
description = "A scalable, distributed message queue powered by a segmented, partitioned, replicated and immutable log."
repository = "https://github.com/arindas/laminarmq"
license = "MIT"
categories = ["web-programming"]
keywords = ["message-queue", "distributed-systems", "segmented-log", "io-uring"]
exclude = [".github/", "assets/"]
version = "0.0.5-rc2"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glommio = "0.8.0"
crc32fast = "1.3.2"
bincode = "1"
async-trait = "0.1.57"
futures-lite = "1.12.0"
byteorder = "1.4.3"
serde = { version = "1.0.144", features = ["derive"] }
hyper = { version = "0.14.20", features = ["server", "http1", "http2"] }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "sync", "net", "fs"] }
tracing = "0.1.37"
bytes = "1.3.0"
route-recognizer = "0.3.1"
futures-core = "0.3.25"
futures-channel = "0.3"
futures-util = "0.3.25"
async-stream = "0.3.3"
tracing-subscriber = "0.3.16"
ctrlc-async = "3.2.2"
tower-service = "0.3.2"
num = "0.4.0"
futures-time = "3.0.0"
async-io = "1.13.0"
generational-cache = "0.2.2"

[lib]
name = "laminarmq"
bench = false

[[bin]]
name = "laminarmq-client-cli"
path = "./src/bin/laminarmq_client_cli.rs"
bench = false

[[bin]]
name = "laminarmq-server"
path = "./src/bin/laminarmq_server.rs"
bench = false

[dev-dependencies]
rlimit = "0.10.1"
criterion = { version = "0.5", features = ["html_reports", "async_futures", "async_tokio"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

[[bench]]
name = "commit_log_append"
harness = false

[[bench]]
name = "segmented_log_read_stream"
harness = false
