[package]
name = "laminarmq-tokio-commit-log-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
crc32fast = "1.3.2"
hyper = "0.14.27"
laminarmq = { git = "https://github.com/arindas/laminarmq.git", branch = "dev/1" }
serde = { version = "1.0.188", features = ["derive"] }
tokio = "1.32.0"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.4", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
